tests/integration/traits/errors/impl-type/main.cx
data D {}

trait T a {
  m: fun(a) -> Number
}

impl T D {
  m = fun(d) {
    "boo"
  }
}
